<resources>
    <string name="app_name">Mazra\'a Events</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="events">Events</string>
    <string name="jan">Events in January</string>
    <string name="feb">Events in February</string>
    <string name="mar">Events In March</string>
    <string name="april">Events in April</string>
    <string name="may">Events in may</string>
    <string name="june">Events in june</string>
    <string name="july">events in july</string>
    <string name="august">events in August</string>
    <string name="September">Events in September</string>
    <string name="october">Events in October</string>
    <string name="november">Events In November</string>
    <string name="december">Events in December</string>
    <string name="novemberr">Events in November</string>
    <string name="decemberr">Events in December</string>


    <string name="mazraaevents">MyAndroidApp</string>
    <string name="country_prompt">Choose a country</string>

    <string-array name="month_array">
        <item>Januray</item>
        <item>Februray</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Notes" />
    <string name="Send" />
</resources>
